# whatsdone

./: .editorconfig  .eslintignore  .eslintrc  .eslintrc.yaml  .gitignore  .jshintrc  .travis.yml  AGENTS.md  Makefile  README.md  app.js  build.gradle  buildman.config.js  buildmate.config.js  ci-build.sh  claude-progress.txt  deploy-module.sh  deploy-system.sh  destroy-system.sh  dones.sample.json  fetch-log.sh  gulpfile.js  kumo.json  mise.toml  module-deploy-order--env.txt  module-deploy-order--no-env.txt  module-deploy-order.txt  package.json  server.js  travis-build.sh  travis-deploy.sh  travis-trigger.sh
.claude/: settings.json
.ebextensions/: nodecommand.config  settings.config
ci/: Makefile  README.md  ci-user.yaml
config/: ci.js  common.js  prod.js  sit.js
docs/: AGENT_PROMPT.md  TASKS.yaml  backlog_audit.ndjson  req-2-pr-workflow-repro.md
ml/: .gitignore  README.md  docker-compose.yml  env.example  mise.toml  pyproject.toml  test_setup.py
ml/docker/: Dockerfile.mlflow
ml/flows/: __init__.py  batch_prediction_flow.py  model_training_flow.py  simple_flow.py
ml/flows/lib/config/: settings.py
ml/flows/lib/models/: __init__.py  text_preprocessor.py  topic_classifier.py
ml/flows/lib/utils/: aws_utils.py  mlflow_utils.py
ml/ops/metaflow/: config.json
ml/ops/mlflow/: config.yaml
ml/ops/postgresql/: init.sql
ml/scripts/: run_prediction.sh  run_training.sh  setup.sh
prompts/: cloud-infra-naming-convention.md  general-guidelines.md  local-execution.md  (+8 more)
tools/done-analysis/: .gitignore  README.md  dump_done_table.py  mise.toml  pyproject.toml
(+767 files in other folders)
